# libgm

./: CMakeLists.txt  README  README.md
libgm/: CMakeLists.txt  gm.h
testgm/: CMakeLists.txt  testgm.c
